--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
     "@kinde-oss/kinde-auth-nextjs": "^2.0.13",
+    "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -21,16 +24,24 @@
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "@uploadthing/react": "^6.0.2",
+    "ai": "^2.2.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
+    "langchain": "^0.0.213",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
+    "openai": "^4.24.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.2",
     "react-loading-skeleton": "^3.3.1",
     "react-pdf": "^7.6.0",
+    "react-resize-detector": "^9.1.1",
+    "react-textarea-autosize": "^8.5.3",
+    "simplebar-react": "^3.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
